coquilles + petites modifs

--- a/4-model_2.html
+++ b/4-model_2.html
@@ -153,9 +153,9 @@
 	<hr>
 	<img data-src="./img/eq/motion_2.svg" width="80%">
 	<aside class="notes">
-		Les déformations sont données par les dérivées spatiales de la fibre neutre et du repère matériel, qui font apparaitre le vecteur des déformations (noté ETA) et le vecteur des courbures matérielles (noté Varkappa).
+		Les déformations sont quant à elles données par les dérivées spatiales de la fibre neutre et du repère matériel, qui font apparaitre le vecteur des déformations (noté ETA) et le vecteur des courbures matérielles (noté Varkappa).
 		<hr>
-		Du fait de l'extension epsilon de la poutre, qui je le rappelle n'est pas supposée strictement inextensible dans la théorie de Kirchhoff, les courbures materielles diffèrent ne s'assimilent plus aux courbures géométriques. Il faut tenir compte du changement de longueur de la poutre.
+		Du fait de l'extension epsilon de la poutre, qui je le rappelle n'est pas supposée strictement inextensible dans la théorie de Kirchhoff, les courbures materielles ne s'assimilent plus aux courbures géométriques. Il faut tenir compte du changement de longueur de la poutre.
 		<!-- <hr>
 		Les composantes transverses du vecteur des déformations ETA sont négligées conformément aux hypothèses. Il ne reste donc que la composante qui caractérise la déformation axiale de la poutre. -->
 	</aside>
@@ -173,11 +173,11 @@
 	<hr>
 	<img data-src="./img/eq/constitutive_2.svg" width="80%">
 	<aside class="notes">
-		Dill montre que les équations constitutives qui relient les efforts et moments internes aux déformations et courbures matérielles, sont en fait déduites de l'élasticité 3D pour un matériau élastique.
+		Dill montre ensuite que les équations constitutives qui relient le moment aux courbures sont déduites de l'élasticité 3D pour un matériau élastique.
+		<!-- <hr>
+		Ces relations ne sont donc pas des hypothèses du modèle à proprement parlé. -->
 		<hr>
-		Ces relations ne sont donc pas des hypothèses du modèle à proprement parlé.
-		<hr>
-		Remarquons également que la constante de torsion est distincte du moment polaire de la section, et dépend de sa fonction de gauchissement notée phi.
+		Remarquons également que la constante de torsion diffère du moment polaire de la section, et dépend de sa fonction de gauchissement notée phi.
 	</aside>
 </section>
 
