--- a/index.html
+++ b/index.html
@@ -45,16 +45,17 @@
 				<table class="" width="100%" style="text-align:left; vertical-align:middle;">
 					<!-- <tr style="height:15px;"></tr> -->
 					<tr style="border-top:0px solid black">
-						<td width="35%" style="text-align:left; vertical-align:middle;">
+						<td width="30%" style="text-align:left; vertical-align:middle;">
 							<img data-src="./img/logo/enpc.svg" width="100%">
 						</td>
-						<td width="30%" style="text-align:center; vertical-align:middle;">
-							<small>Thèse de doctorat présentée le 20/12/2017 par</small>		
+						<td width="40%" style="text-align:center; vertical-align:middle;">
+							<small>Thèse de doctorat présentée le</small>		
 							<br>
+							<small>20/12/2017</small>
 							<br>
-							<h6>Lionel du Peloux</h6>
+							<small>Lionel du Peloux</small>
 						</td>
-						<td width="35%" style="text-align:center; vertical-align:middle;">
+						<td width="30%" style="text-align:center; vertical-align:middle;">
 							<small>Olivier Baverel (Dir.)</small>
 							<br>
 							<small>Jean-François Caron</small>
