--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<title>Modeling of bending-torsion couplings in active-bending structures</title>
-
+		<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Roboto:300" rel="stylesheet">
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/thesis.css" id="theme">
 		<!-- <link rel="stylesheet" href="css/theme/white.css" id="theme"> -->
@@ -98,13 +98,13 @@
 				</table>
 				<p style="text-align:center"><cite>(<sup>*</sup>) Douthe 2007, Bouhaya 2010, Kotelnikova 2012, Tayeb 2015, du Peloux 2017</cite>	</p>				
 				<aside class="notes">
-					Avant de rentrer dans le vif du sujet, je voudrais souligner que j'ai cherché à rentrer dans cette problématique avec une double casquette : 
+					J'ai cherché à rentrer dans cette problématique avec une double casquette : 
 					<hr>
 					La casquette de chercheur par mon activité au sein du laboratoire Navier, 
 					<br>
 					Et la casquette d'ingénieur par mon activité au sein du bureau d'étude T/E/S/S.
 					<hr>
-					Je crois que cela a donné une coloration particulière à mon travail.
+					Je crois que cela a donné une coloration particulière à mon travail, et je voulais donc souligner avant de rentrer dans le vif du sujet.
 				</aside>
 			</section>
 
