Css new theme thesis2

--- a/1-intro.html
+++ b/1-intro.html
@@ -40,7 +40,7 @@
 	</aside>
 </section>
 <section class="black center" data-background-video="./img/mov/booby.mp4" data-background-size="contain" data-background-video-muted >
-	<h7 class="">Hybrid Structural Skin 2015</h7>
+	<h7 class="">Structural Skin 2015</h7>
 	<aside class="notes">
 		Second projet, un prototype d'enveloppe structurelle hybride, réalisé en deuxième année de thèse. Il est visible sur le campus. Il couvre environ 10m2 pour une portée de 3m. 
 		<hr>
